k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: task-platform-ingress
  namespace: task-platform

spec:
  ingressClassName: nginx

  rules:
    - http:

        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /health
            pathType: Exact

            backend:
              service:
                name: backend
                port:
                  number: 5000
